# puppy-os

./: .gitignore  Cargo.toml  Dockerfile  FILES.md  README.md  TOOLCHAIN.md  build.sh  build_package.sh  puppyos.sh  update.sh
docs/: CONFIGS.md  FILES.md  RUNTIME.md  TOOLCHAIN.md
files/linux/: config.txt  dts_override.txt
files/u-boot/: config.txt
files/wpa_supplicant/: config.txt
internal/: makepkg.sh  toolchain.sh
pkgs/: attr.sh  compiler-rt.sh  compiler-rt.toml  dash.sh  dash.toml  dnsmasq.sh  file.sh  hostapd.sh  kmod.sh  libcxx.sh  libcxx.toml  linux.sh  linux.toml  musl.sh  musl.toml  ncurses.sh  openssl.sh  openssl.toml  procps-ng.sh  puppyos.sh  runit.sh  toybox.sh  toybox.toml  util-linux.sh  wpa_supplicant.sh  xz.sh  zlib.sh  zlib.toml
pkgs/base/: hwdata.sh  iana-etc.sh  iana-protocols.sh  iana-timezones.sh  iana.sh  libcxx.sh  musl.sh  puppyos-etc.sh  puppyos-init.sh
pkgs/base_toolchain/: compiler-rt.sh  linux-headers.sh  llvm.sh  musl-headers.sh
pkgs/boot/: arm-trusted-firmware.sh  linux.sh  u-boot.sh
pkgs/bootloader/: arm-trusted-firmware.sh  linux.sh  puppy-os.sh  u-boot.sh
pkgs/compression/: brotli.sh  bzip2.sh  lz4.sh  xz.sh  zlib.sh  zstd.sh
pkgs/crypto/: libxcrypt.sh  openssl.sh
pkgs/daemons/: dhcpcd.sh  hostapd.sh  ntp.sh  openntpd.sh  openssh.sh
pkgs/kernel/: arm-trusted-firmware.sh  linux.sh  u-boot.sh
pkgs/libs/: libedit.sh  libnl.sh  ncurses.sh  openssl.sh
pkgs_toolchain/: llvm.toml
scripts/: do_build.sh  do_prepare.sh  do_update.sh  functions.sh
src/: main.rs  make.sh  output.rs  state.rs  utils.rs
(+257 files in other folders)
