[package]
name = "doggy"
version = "0.1.0"
description = "Tiny package manager for embedded systems"
authors = ["PancakeTAS"]
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
toml = "0.9"
