[package]
name = "doggy"
version = "0.1.0"
description = "Tiny package manager for embedded systems"
authors = ["PancakeTAS"]
edition = "2024"

[dependencies]
ptree = { version = "0.5", default-features = false, features = ["ansi"] }
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
console = "0.16"
anyhow = "1.0"
rand = "0.9"
toml = "0.9"
